--- a/ios/Podfile
+++ b/ios/Podfile
@@ -3,7 +3,7 @@ source 'https://github.com/CocoaPods/Specs.git'
 platform :ios, '9.3'
 
 def common_pods
-    pod 'GVRAudioSDK', '1.120.0'
+#    pod 'GVRAudioSDK', '1.120.0'
 end
 
 target 'ViroSample' do
@@ -13,11 +13,11 @@ end
 target 'ViroKit' do
     use_frameworks!
     common_pods
-    pod 'GVRSDK', '1.120.0'
+#    pod 'GVRSDK', '1.120.0'
 end
 
 target 'ViroKit_static_lib' do
     common_pods
-    pod 'GVRKit', '1.120.0'
+#    pod 'GVRKit', '1.120.0'
 end
 
